--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,24 @@ body {
   margin-bottom: 94px;
 }
 
+.description::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  outline: 1px solid red;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateX(-100%);
+}
+
+.portfolio .item {
+  position: relative;
+}
+
 .portfolio .item,
 .tasks .item {
   width: calc((100% - 30px * 2) / 3);
