--- a/css/styles.css
+++ b/css/styles.css
@@ -482,23 +482,57 @@ body {
   margin-bottom: 94px;
 }
 
-.description::after {
+.description {
+  overflow: hidden;
+  position: relative;
+}
+/* .description::before {
   content: "";
   display: inline-block;
   position: absolute;
   top: 0;
-  left: 0;
+  bottom: 20%;
   width: 100%;
   height: 100%;
   outline: 1px solid red;
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: rgba(33, 150, 243, 0.5);
 
   transform: translateX(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+.des {
+  position: absolute;
+  /* top: 0;
+  bottom: 30%;
+  width: 100%;*/
+  height: 100%;
+  /* outline: 1px solid red; */
+  background-color: rgba(33, 150, 243, 0.9);
+
+  font-family: Roboto;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding-top: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio .item:hover .des {
+  transform: translateY(-100%);
 }
 
-.portfolio .item {
+/* .portfolio .item {
   position: relative;
-}
+} */
 
 .portfolio .item,
 .tasks .item {
