--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,56 @@ body {
   display: inline-block;
   min-width: 200px;
 }
+/* .hero {
+  outline: 2px solid tomato;
+} */
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  opacity: 1;
+
+  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.9);
+  transform: translate(-50%, -50%);
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 528px;
+  height: 581px;
+  background-color: var(--primary-white-colour);
+
+  background-position: right top;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close {
+  display: block;
+  background-image: url(../images/close.svg);
+  background-repeat: no-repeat;
+
+  height: 30px;
+  width: 30px;
+  margin-top: 8px;
+  margin-right: 8px;
+  margin-left: auto;
+}
 
 .portfolio-nav .button {
   font-weight: 500;
