--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ body {
   margin-top: 0px;
 }
 .section {
-  /* margin-bottom: 94px; */
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 .transparent-title {
@@ -220,9 +220,9 @@ body {
 
 /* преимущества */
 
-.features {
+/* .features {
   padding-top: 94px;
-}
+} */
 
 .advantages .title {
   color: var(--title-colour);
@@ -280,6 +280,9 @@ body {
   flex-wrap: wrap;
   font-size: 0;
 }
+.task {
+  padding-top: 0px;
+}
 .border {
   position: relative;
 }
@@ -309,9 +312,7 @@ body {
 .team {
   background-color: #f5f4fa;
 }
-.team .section-title {
-  padding-top: 94px;
-}
+
 .team .team-title {
   font-weight: 500;
   font-size: 16px;
@@ -331,6 +332,7 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: var(--primary-white-colour);
 }
 
 .post {
@@ -556,7 +558,7 @@ body {
 
   margin-left: auto;
   margin-right: auto;
-  padding-top: 94px;
+
   padding-bottom: 50px;
 }
 .portfolio {
@@ -564,7 +566,6 @@ body {
   flex-wrap: wrap;
   /* background-color: chartreuse; */
   font-size: 0;
-  margin-bottom: 94px;
 }
 
 .description {
@@ -686,7 +687,7 @@ body {
   padding-bottom: 94px;
 }
 
-.team-title {
+.clients-title {
   margin-bottom: 50px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
